# simple_6502_emulator

./: CMakeLists.txt  Makefile  README.md  apple2_cli.cpp  apple2_machine.cpp  apple2_machine.h  console.cpp  console.h  emu  emu_core.cpp  emu_core.h  emu_main.cpp  opcode_print.h  opcodes.h
opcode_handler/: arithmetic.h  branch.h  compare.h  inc_dec.h  interrupts.h  jump.h  load.h  logical.h  register.h  shift.h  stack.h  store.h
tests/: apple1_smoke_test.cpp  functional_test.cpp
